--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "Dylan Anderson",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
