--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "To Do list web application backend using the express framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "npx nodemon app.js"
   },
   "author": "Dylan Anderson",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.7"
+    "mongodb": "^3.6.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
