--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,14 @@
   "name": "todo",
   "version": "1.0.0",
   "description": "To Do list web application backend using the express framework",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "npx nodemon app.js"
+    "start": "node dist/app.js",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "predev": "npm run build",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start"
   },
   "author": "Dylan Anderson",
   "license": "MIT",
@@ -16,12 +20,20 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.7",
+    "mongodb": "^3.7.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^16.10.1",
+    "nodemon": "^2.0.7",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.3"
   }
 }
