--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
