--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^3.6.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "winston": "^3.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
