--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-calendar": "^3.6.0",
     "react-color": "^2.19.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
