--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+application.properties
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
